--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 	<link rel="stylesheet" href="/neo.css">
 	<!-- <link rel="stylesheet" href="/bootstrap-flaty.min.css"> -->
-	<link rel="Icon" href="/neo_images/neo_logo22.png">
+	<link rel="Icon" href="/neo_images/smallLogo.jpg">
 </head>
 
 <body class="container-fluid">
